# gpuplay

./: Cargo.toml  LICENSE.MIT  README.md
shaders/: fill.frag  fill.glsl  fill.wgsl
src/: buffer.rs  main.rs  shader.rs  watch.rs
src/shaders/: prelude.frag  prelude.wgsl  vert.wgsl
