[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
pollster = "0.3.0"
thiserror = "1.0.59"
wgpu = { version = "0.19.4", features = ["naga-ir"] }
winit = "0.29.15"
